2009-11-08  Robert Millan  <rmh.grub@aybabtu.com>

	* kern/i386/multiboot_mmap.c (grub_machine_mmap_init): Improve
	error message for excessively large memory map.

2009-11-08  Robert Millan  <rmh.grub@aybabtu.com>

	* autogen.sh: Use `sh gendistlist.sh' to avoid reliing on
	executable bit.

2009-11-08  Robert Millan  <rmh.grub@aybabtu.com>

	* kern/i386/multiboot_mmap.c (grub_machine_mmap_init): Improve error
	message for coreboot users.

2009-11-07  Robert Millan  <rmh.grub@aybabtu.com>

	Fix build with GNU gold.

	* conf/i386-pc.rmk (boot_img_LDFLAGS, pxeboot_img_LDFLAGS)
	(diskboot_img_LDFLAGS, lnxboot_img_LDFLAGS)
	(cdboot_img_LDFLAGS): Prepend `0x' qualifier to hexadecimal
	link addresses.
	* aclocal.m4: Likewise.

2009-11-04  Felix Zielcke  <fzielcke@z-51.de>

	* configure.ac (AC_PREREQ): Bump to 2.59d.
	* INSTALL: Make it more clear when Autoconf and Ruby are
	needed and when to run `./autogen.sh'.

2009-11-03  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* util/grub.d/30_os-prober.in: Restore default behavior for unsupported
	OSes.

2009-11-02  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* util/grub.d/30_os-prober.in: Add GNU/Hurd support

2009-11-02  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* util/grub.d/10_hurd.in: Drop /dev/ prefix from root device path before
	giving it to GNU Mach.

2009-11-02  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* util/hostdisk.c (grub_util_biosdisk_get_grub_dev): Subtract 1 from
	GNU partition number to get internal GRUB partition number.

2009-11-02  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* util/grub.d/10_hurd.in: Call prepare_grub_to_access_device
	${GRUB_DEVICE_BOOT} before loading /boot kernel.

2009-11-01  Robert Millan  <rmh.grub@aybabtu.com>

	Based on patch from BVK Chaitanya  <bvk.groups@gmail.com>
	* kern/misc.c (grub_strchr, grub_strrchr): Fix to handle c == '\0'
	case.

2009-11-01  Felix Zielcke  <fzielcke@z-51.de>

	* Makefile.in (TARGET_CPPFLAGS): Add `-I$(srcdir)/include'.
